# hashcode

practice-problem/: practice-problem.cabal
practice-problem/src/: Main.hs
quali/: quali.cabal
quali/src/: Main.hs  Parse.hs  Types.hs
qualifier-round/: quali.cabal
qualifier-round/results/: busy_day.out  mother_of_all_warehouses.out  redundancy.out  test.in  test.out
qualifier-round/src/: Main.hs  Parse.hs  Types.hs
