name:                quali
version:             0.2.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/quali#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Beaumont, Joel Hermanns
maintainer:          joel.hermanns@gmail.com
copyright:           2016 Michael Beaumont, Joel Hermanns
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable quali
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types
                     , Parse
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
